# 3dlab

./: CMakeLists.txt
FiguresOOP/: CMakeLists.txt  main.cpp  testXLib.cpp  testXLib.h
VoxTest/: CMakeLists.txt
VoxTest/src/: file_data.cpp  file_data.h  generate_shapes.cpp  generate_shapes.h  glvoxel.cpp  glvoxel.h  main.cpp  octree.cpp  octree.h  octree_data.cpp  octree_data.h  octree_node.cpp  octree_node.h  octree_utils.cpp  octree_utils.h  shape_data.cpp  shape_data.h  vox.frag  vox.vert  vox_data_level.h  vox_render.cpp  vox_render.h  widget.cpp  widget.h
cmake/: FindX11.cmake
findPath3D/: CMakeLists.txt  Description.txt  Описание.txt
findPath3D/src/: main.cpp  my_dialog.cpp  my_dialog.h
findPath3D/src/gl_renderer/: Land.frag  Land.vert  Water.frag  Water.vert  glmapview.cpp  glmapview.h
findPath3D/src/kfp_algo/: Heightmap.cpp  Heightmap.h  MeshObject.cpp  MeshObject.h  Scene.cpp  Scene.h
findPath3D/src/map_readers/: fileMapReader.cpp  fileMapReader.h
findPath3D/src/widgets/: findpath3d.cpp  findpath3d.h  findpath3d.qrc  findpath3d.ui
findPath3D/test_data/: testMap - 1.map  testMap - 2.map  testMap.map  testMap1.map  testMap2.map  testMap_hard.map
geoMath/: CMakeLists.txt  Geometry.cpp  Geometry.h  vector2d.cpp  vector2d.h  vector3d.cpp  vector3d.h  vector4d.cpp  vector4d.h
glExt/: glExtInit.cpp  glExtInit.h  gl_helpers.cpp  gl_helpers.h
